It generates! Changes YAML file Adds iteration over YAML file Adds Handlebar Helpers

--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="build/styles/style.css">
   </head>
   <body>
-    {{> hello }}
+    {{> person }}
+    {{> development}}
+    {{> customers}}
+    {{> coding}}
+    {{> soft-skills }}
+    {{> links }}
     <script src="build/scripts/bundle.js"></script>
   </body>
 </html>
