--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,6 @@
-body {
-    color: red;
-}
+@import "normalize";
+@import "variables";
+@import "mixins";
+@import "base";
+@import "layout";
+@import "lists";
