--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -3,15 +3,18 @@
     <meta charset="UTF-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
     <link rel="stylesheet" href="build/styles/style.css">
   </head>
   <body>
-    {{> person }}
-    {{> development}}
-    {{> customers}}
-    {{> coding}}
-    {{> soft-skills }}
-    {{> links }}
+    <div class="container">
+      {{> person }}
+      {{> development}}
+      {{> customers}}
+      {{> coding}}
+      {{> soft-skills }}
+      {{> links }}
+    </div>
     <script src="build/scripts/bundle.js"></script>
   </body>
 </html>
