--- a/src/templates/html/partials/customers.hbs
+++ b/src/templates/html/partials/customers.hbs
@@ -1,5 +1,5 @@
 <h2>{{ customers.title }}</h2>
- <ul>
+ <ul class="unstyled-list">
 {{#each customers.list as |customer| }}
   <li>{{{m customer}}}</li>
 {{/each}}
