--- a/src/templates/html/partials/soft-skills.hbs
+++ b/src/templates/html/partials/soft-skills.hbs
@@ -1,6 +1,6 @@
 <h2>{{ soft-skills.title }}</h2>
- <ul>
-{{#each soft-skills.list as |skill| }}
-  <li>{{{m skill}}}</li>
-{{/each}}
+<ul class="unstyled-list">
+  {{#each soft-skills.list as |skill| }}
+    <li>{{{m skill}}}</li>
+  {{/each}}
 </ul>
