--- a/src/templates/html/partials/customers.hbs
+++ b/src/templates/html/partials/customers.hbs
@@ -1,6 +1,8 @@
-<h2>{{ customers.title }}</h2>
- <ul class="unstyled-list">
-{{#each customers.list as |customer| }}
-  <li>{{{m customer}}}</li>
-{{/each}}
-</ul>
+<section>
+  <h2>{{ customers.title }}</h2>
+   <ul class="unstyled-list">
+  {{#each customers.list as |customer| }}
+    <li>{{{m customer}}}</li>
+  {{/each}}
+  </ul>
+</section>
