--- a/src/templates/html/partials/development.hbs
+++ b/src/templates/html/partials/development.hbs
@@ -1,7 +1,9 @@
-<h2>{{ development.title }}</h2>
-<dl>
-  {{#iterateObject "development" this}}
-    <dt>{{key}}</dt>
-    <dd>{{{m value}}}</dd>
-  {{/iterateObject}}
-</dl>
+<section>
+  <h2>{{ development.title }}</h2>
+  <dl>
+    {{#iterateObject "development" this}}
+      <dt>{{key}}</dt>
+      <dd>{{{m value}}}</dd>
+    {{/iterateObject}}
+  </dl>
+</section>
