--- a/src/templates/html/partials/links.hbs
+++ b/src/templates/html/partials/links.hbs
@@ -1,6 +1,8 @@
-<h2>{{ links.title }}</h2>
-<ul class="unstyled-list ">
-  {{#each links.list as |link| }}
-    <li>{{{m link}}}</li>
-  {{/each}}
-</ul>
+<section>
+  <h2>{{ links.title }}</h2>
+  <ul class="unstyled-list ">
+    {{#each links.list as |link| }}
+      <li>{{{m link}}}</li>
+    {{/each}}
+  </ul>
+</section>
