--- a/src/templates/html/partials/person.hbs
+++ b/src/templates/html/partials/person.hbs
@@ -1,7 +1,9 @@
-<h2>{{ person.title }}</h2>
-<dl>
-  {{#iterateObject "person" this}}
-    <dt>{{key}}</dt>
-    <dd>{{value}}</dd>
-  {{/iterateObject}}
-</dl>
+<section>
+  <h2>{{ person.title }}</h2>
+  <dl>
+    {{#iterateObject "person" this}}
+      <dt>{{key}}</dt>
+      <dd>{{value}}</dd>
+    {{/iterateObject}}
+  </dl>
+</section>
