--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -4,10 +4,11 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="build/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
     <div class="container">
+      {{> introduction }}
       {{> person }}
       {{> development}}
       {{> customers}}
@@ -15,6 +16,6 @@
       {{> soft-skills }}
       {{> links }}
     </div>
-    <script src="build/scripts/bundle.js"></script>
+    <script src="/scripts/bundle.js"></script>
   </body>
 </html>
