--- a/src/templates/html/partials/soft-skills.hbs
+++ b/src/templates/html/partials/soft-skills.hbs
@@ -1,6 +1,8 @@
-<h2>{{ soft-skills.title }}</h2>
-<ul class="unstyled-list">
-  {{#each soft-skills.list as |skill| }}
-    <li>{{{m skill}}}</li>
-  {{/each}}
-</ul>
+<section>
+  <h2>{{ soft-skills.title }}</h2>
+  <ul class="unstyled-list">
+    {{#each soft-skills.list as |skill| }}
+      <li>{{{m skill}}}</li>
+    {{/each}}
+  </ul>
+</section>
