--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      {{> language-link }}
       {{> introduction }}
       {{> person }}
       {{> development}}
