--- a/src/templates/html/partials/customers.hbs
+++ b/src/templates/html/partials/customers.hbs
@@ -2,7 +2,7 @@
   <h2>{{ customers.title }}</h2>
    <ul class="unstyled-list">
   {{#each customers.list as |customer| }}
-    <li>{{{m customer}}}</li>
+    <li>{{{m customer}}},</li>
   {{/each}}
   </ul>
 </section>
