--- a/src/templates/html/partials/soft-skills.hbs
+++ b/src/templates/html/partials/soft-skills.hbs
@@ -2,7 +2,7 @@
   <h2>{{ soft-skills.title }}</h2>
   <ul class="unstyled-list">
     {{#each soft-skills.list as |skill| }}
-      <li>{{{m skill}}}</li>
+      <li>{{{m skill}}},</li>
     {{/each}}
   </ul>
 </section>
