--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
+        <!-- inject:head:html -->
+    <!-- endinject -->
   </head>
   <body>
     <div class="container">
