--- a/src/templates/html/partials/introduction.hbs
+++ b/src/templates/html/partials/introduction.hbs
@@ -1,6 +1,6 @@
 <section class="introduction">
   <h1>{{ title }}</h1>
   <img src="{{imagePath}}" alt="Foto von Timo Zöller">
-  {{introduction}}
+  {{{m introduction}}}
   
 </section>
