Enhances German version

--- a/src/templates/html/partials/person.hbs
+++ b/src/templates/html/partials/person.hbs
@@ -3,7 +3,7 @@
   <dl>
     {{#iterateObject "person" this}}
       <dt>{{key}}</dt>
-      <dd>{{value}}</dd>
+      <dd>{{{value}}}</dd>
     {{/iterateObject}}
   </dl>
 </section>
