--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -14,6 +14,9 @@
       {{> introduction }}
       {{> person }}
       {{> development}}
+      {{#unless languageExtension}}
+        {{> selected-projects}}
+      {{/unless}}
       {{> customers}}
       {{> coding}}
       {{> soft-skills }}
