Changes phone number and image

--- a/src/templates/html/partials/person.hbs
+++ b/src/templates/html/partials/person.hbs
@@ -2,8 +2,8 @@
   <h2>{{ person.title }}</h2>
   <dl>
     {{#iterateObject "person" this}}
-      <dt>{{key}}</dt>
-      <dd>{{{value}}}</dd>
+    <dt>{{key}}</dt>
+    <dd>{{{m value}}}</dd>
     {{/iterateObject}}
   </dl>
 </section>
