--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -1,5 +1,4 @@
 <html>
-<<<<<<< HEAD
 
 <head>
   <meta charset="UTF-8">
@@ -13,45 +12,11 @@
 <body>
   <div class="container">
     <!-- prettier-ignore-start -->
-    {{> language-link }}
-    {{> introduction }}
-    {{> person }}
-    {{> development}}
-    {{#unless languageExtension}}
-      {{> selected-projects}}
-    {{/unless}}
-    {{> customers}}
-    {{> coding}}
-    {{> soft-skills }}
-    {{> links }}
+    {{> language-link }} {{> introduction }} {{> person }} {{> development}} {{#unless languageExtension}} {{> selected-projects}}
+    {{/unless}} {{> customers}} {{> coding}} {{> soft-skills }} {{> links }}
     <!-- prettier-ignore-end -->
   </div>
   <script src="/scripts/bundle.js"></script>
 </body>
 
-=======
-  <head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
-        <!-- inject:head:html -->
-    <!-- endinject -->
-  </head>
-  <body>
-    <div class="container">
-      {{> language-link }}
-      {{> introduction }}
-      {{> person }}
-      {{> development}}
-      {{> selected-projects}}
-      {{> customers}}
-      {{> coding}}
-      {{> soft-skills }}
-      {{> links }}
-    </div>
-    <script src="/scripts/bundle.js"></script>
-  </body>
->>>>>>> ff3e5f5dfe31f11e99269c115cc6d12f709834d9
 </html>
