--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -11,10 +11,8 @@
 
 <body>
   <div class="container">
-    <!-- prettier-ignore-start -->
-    {{> language-link }} {{> introduction }} {{> person }} {{> development}} {{#unless languageExtension}} {{> selected-projects}}
-    {{/unless}} {{> customers}} {{> coding}} {{> soft-skills }} {{> links }}
-    <!-- prettier-ignore-end -->
+    {{> language-link }} {{> introduction }} {{> person }} {{> development}} {{> selected-projects}} {{> customers}} {{> coding}}
+    {{> soft-skills }} {{> links }}
   </div>
   <script src="/scripts/bundle.js"></script>
 </body>
