--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,9 +4,9 @@ $line-height: 1.4;
 
 $vertical-rhythm: $font-size * $line-height / 2;
 
-$background-color: #44537F;
-$text-color: #E5ECFF;
+$background-color: #fff;
+$text-color: #15161c;
 
-$link-color: #e87b12;
+$link-color: #1d1dad;
 $link-color-active: lighten($link-color, 10%);
 $link-color-visited: darken($link-color, 10%);
