--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,9 @@
-@import "normalize";
-@import "variables";
-@import "mixins";
-@import "base";
-@import "layout";
-@import "lists";
-@import "introduction";
-@import "language-selection";
+@import 'normalize';
+@import 'variables';
+@import 'mixins';
+@import 'base';
+@import 'layout';
+@import 'lists';
+@import 'introduction';
+@import 'language-selection';
+@import 'selected-projects';
