--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    {{> language-link }} {{> introduction }} {{> person }} {{> development}} {{> selected-projects}} {{> customers}} {{> coding}}
+    {{> language-link }} {{> introduction }} {{> person }}  {{> selected-projects}} {{> customers}} {{> coding}}
     {{> soft-skills }} {{> links }}
   </div>
   <script src="/scripts/bundle.js"></script>
