--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,19 +1,25 @@
 @mixin respond-to($medias...) {
   @each $media in $medias {
     @if $media == small_phone {
-      @media only screen and (max-device-width: 375px) { @content; }
-    }
-    @else if $media == phone {
-      @media only screen and (max-device-width: 736px), (max-width: 736px) { @content; }
-    }
-    @else if $media == not_phone {
-      @media only screen and (min-device-width: 737px), (min-width: 737px) { @content; }
-    }
-    @else if $media == print {
-    @media only print { @content; }
-    }
-    @else if $media == screen {
-      @media only screen { @content }
+      @media only screen and (max-device-width: 375px) {
+        @content;
+      }
+    } @else if $media == phone {
+      @media only screen and (max-width: 736px) {
+        @content;
+      }
+    } @else if $media == not_phone {
+      @media only screen and (min-width: 737px) {
+        @content;
+      }
+    } @else if $media == print {
+      @media only print {
+        @content;
+      }
+    } @else if $media == screen {
+      @media only screen {
+        @content;
+      }
     }
   }
 }
