Adds Open Graph to header

--- a/src/templates/html/index.hbs
+++ b/src/templates/html/index.hbs
@@ -7,7 +7,28 @@
   <link rel="stylesheet" href="/styles/style.css">
   <!-- inject:head:html -->
   <!-- endinject -->
-</head>
+
+  <!-- HTML Meta Tags -->
+  <meta name="description" content="The CV of Javascript and Frontend Developer Timo Zöller">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://pixelkritzel.de/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Javascript Developer Timo Zöller">
+  <meta property="og:description" content="The CV of Javascript and Frontend Developer Timo Zöller">
+  <meta property="og:image" content="https://pixelkritzel.de/static/images/og_preview.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="pixelkritzel.de">
+  <meta property="twitter:url" content="https://pixelkritzel.de/">
+  <meta name="twitter:title" content="Javascript Developer Timo Zöller">
+  <meta name="twitter:description" content="The CV of Javascript and Frontend Developer Timo Zöller">
+  <meta name="twitter:image" content="https://pixelkritzel.de/static/images/og_preview.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+  </head>
 
 <body>
   <div class="container">
